--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,9 +17,9 @@
         <header>
             <div class="logo">KAIVERSUS BLOG</div> 
             <nav>
-                <a href="/">Trang chủ</a>
-                <a href="/about/">Identity</a> 
-                <a href="#writeups">Write up</a>
+                <a href="/">Homepage</a>
+                <a href="/about/">About_me</a> 
+                <a href="#writeups">Repository</a>
             </nav>
         </header>
     </div>
@@ -27,7 +27,7 @@
     {{ content }}
 
     <footer style="text-align: center; padding: 50px; color: var(--text-sub);">
-        <p>&copy; kaiversus_52Hz</p>
+        <p>kaiversus_52Hz</p>
     </footer>
 <script>
     const textElement = document.getElementById('typing-text');
