--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
             <nav>
                 <a href="/">Homepage</a>
                 <a href="/about/">About_me</a> 
-                <a href="/#writeups">Repository</a>
+                <a href="https://kaiversus.github.io/#writeups">Repository</a>
             </nav>
         </header>
     </div>
