--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
 
     <div class="container" style="padding-top: 2px; padding-bottom: 2px;">
         <header>
-            <div class="logo">KAIVERSUS BLOG</div> 
+            <a href="https://kaiversus.github.io/" class="logo" style="text-decoration: none;">KAIVERSUS BLOG</a>
             <nav>
                 <a href="/">Homepage</a>
                 <a href="/about/">About_me</a> 
