--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,13 @@
         </header>
     </div>
 
-    {{ content }}
+    </div>
+
+    <main class="container writeup-content" style="padding-top: 40px; min-height: 60vh;">
+        {{ content }}
+    </main>
+
+    <footer style="text-align: center; padding: 50px; color: var(--text-sub);">
 
     <footer style="text-align: center; padding: 50px; color: var(--text-sub);">
         <p>kaiversus_52Hz</p>
