--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,5 +61,7 @@
     }());
 </script>
 <script src="{{ "/assets/js/cyber-bg.js" | relative_url }}"></script>
+<script src="{{ "/assets/js/cyber-bg.js" | relative_url }}"></script>
+<script src="{{ "/assets/js/copy-code.js" | relative_url }}"></script>
 </body>
 </html>
