--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
 
     </div>
 
-    <main class="container writeup-content" style="padding-top: 40px; min-height: 60vh;">
+    <main class="container {% if page.collection %}writeup-content{% endif %}" style="padding-top: 40px; min-height: 60vh;">
         {{ content }}
     </main>
 
