--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik+Glitch&family=Oxanium:wght@700;800&family=Orbitron:wght@400;700;900&family=Rajdhani:wght@300;500;700&display=swap" rel="stylesheet">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🐬</text></svg>">
     <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
+    <meta name="google-site-verification" content="08i0tKTYKBg3iB34CMHOT7B1_8c441JUnNcx7VV7VHk" />
 </head>
 
 <body>
